force-app/main/default/objects/Pricing_Request__c/Pricing_Request__c.object-meta.xml
<CustomObject>
    <label>Pricing Request</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Pricing Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>