force-app/main/default/objects/Pricing_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please search for appropriate Customer name</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Request</relationshipLabel>
    <relationshipName>Pricing_Request</relationshipName>
    <type>Lookup</type>
</CustomField>