force-app/main/default/objects/Pricing_Request__c/fields/Adjustment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Schedule__c</fullName>
    <inlineHelpText>Existing adj schedule if update for contract, if not leave blank</inlineHelpText>
    <label>Adjustment Schedule</label>
    <type>TextArea</type>
</CustomField>