force-app/main/default/objects/Pricing_Request__c/fields/Adjustment_Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Schedule_Description__c</fullName>
    <inlineHelpText>To have a specific description for an adjustment schedule, if not Customer Name will be used</inlineHelpText>
    <label>Adjustment Schedule Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>