force-app/main/default/objects/Pricing_Request__c/fields/Comments_General_Section__c.field-meta.xml
<CustomField>
    <fullName>Comments_General_Section__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>