force-app/main/default/objects/Pricing_Request__c/fields/Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>Contract_Description__c</fullName>
    <label>Contract Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>