force-app/main/default/objects/Pricing_Request__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>please search for contract name if existing</inlineHelpText>
    <label>Contract Name</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Pricing Request</relationshipLabel>
    <relationshipName>Pricing_Request</relationshipName>
    <type>Lookup</type>
</CustomField>