force-app/main/default/objects/Pricing_Request__c/fields/Customer_ERP_Ship_to__c.field-meta.xml
<CustomField>
    <fullName>Customer_ERP_Ship_to__c</fullName>
    <description>Created as part of CR00031153</description>
    <label>Customer ERP Ship to#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>