force-app/main/default/objects/Pricing_Request__c/fields/Customer_ERP_Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Customer_ERP_Sold_to__c</fullName>
    <inlineHelpText>please insert appropriate ERP Sold To Customer #</inlineHelpText>
    <label>Customer ERP Sold to#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>