force-app/main/default/objects/Pricing_Request__c/fields/Desired_Contract_price__c.field-meta.xml
<CustomField>
    <fullName>Desired_Contract_price__c</fullName>
    <label>Desired Contract price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>