force-app/main/default/objects/Pricing_Request__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <inlineHelpText>end date of missing pricing</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>