force-app/main/default/objects/Pricing_Request__c/fields/ERP_Current_Price__c.field-meta.xml
<CustomField>
    <fullName>ERP_Current_Price__c</fullName>
    <label>ERP Current Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>