force-app/main/default/objects/Pricing_Request__c/fields/Hillrom_Parts__c.field-meta.xml
<CustomField>
    <fullName>Hillrom_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pricing conditions to set in HillRom parts</inlineHelpText>
    <label>Hillrom Parts</label>
    <type>Checkbox</type>
</CustomField>