force-app/main/default/objects/Pricing_Request__c/fields/Isssue_Category__c.field-meta.xml
<CustomField>
    <fullName>Isssue_Category__c</fullName>
    <label>Isssue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EXT_Missing / Incorrect Price</fullName>
            </value>
            <value>
                <fullName>EXT_Missing / Incorrect Discount</fullName>
            </value>
            <value>
                <fullName>EXT_Configurator issue</fullName>
            </value>
            <value>
                <fullName>INT_Wrong ERP set up</fullName>
            </value>
            <value>
                <fullName>INT_Incompatibilty system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>