force-app/main/default/objects/Pricing_Request__c/fields/Item_Type_product__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_product__c</fullName>
    <label>Item# / Type product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>