force-app/main/default/objects/Pricing_Request__c/fields/NMP_Code__c.field-meta.xml
<CustomField>
    <fullName>NMP_Code__c</fullName>
    <label>NMP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>