force-app/main/default/objects/Pricing_Request__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <type>TextArea</type>
</CustomField>