force-app/main/default/objects/Pricing_Request__c/fields/Price_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Number__c</fullName>
    <inlineHelpText>Existing price list # if known, if not leave blank</inlineHelpText>
    <label>Price List Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>