force-app/main/default/objects/Pricing_Request__c/fields/Price_Request_Category__c.field-meta.xml
<CustomField>
    <fullName>Price_Request_Category__c</fullName>
    <label>Price Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAPITAL/SPARE PARTS</fullName>
            </value>
            <value>
                <fullName>RENTAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>