force-app/main/default/objects/Pricing_Request__c/fields/Quote_order_ERP__c.field-meta.xml
<CustomField>
    <fullName>Quote_order_ERP__c</fullName>
    <label>Quote order # (ERP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>