force-app/main/default/objects/Pricing_Request__c/fields/Related_to_pricing_request__c.field-meta.xml
<CustomField>
    <fullName>Related_to_pricing_request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to pricing request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipLabel>Pricing Request</relationshipLabel>
    <relationshipName>Pricing_Request</relationshipName>
    <type>Lookup</type>
</CustomField>