force-app/main/default/objects/Pricing_Request__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Created as part of CR00031179</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>