force-app/main/default/objects/Pricing_Request__c/fields/To_be_managed_by_tender_team_France_onl__c.field-meta.xml
<CustomField>
    <fullName>To_be_managed_by_tender_team_France_onl__c</fullName>
    <description>Created for CR00031754</description>
    <label>To be managed by tender team-France only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>