force-app/main/default/objects/Pricing_Request__c/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <label>Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Price List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>