force-app/main/default/objects/Pricing_Request__c/recordTypes/Near_miss_Pricing_Request.recordType-meta.xml
<RecordType>
    <fullName>Near_miss_Pricing_Request</fullName>
    <active>true</active>
    <description>Missing or Incorrect price</description>
    <label>Near miss Pricing Request</label>
</RecordType>