force-app/main/default/objects/Pricing_Request__c/recordTypes/Pricing_Request.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request</fullName>
    <active>true</active>
    <description>Set up / Update Prices</description>
    <label>Pricing Request</label>
</RecordType>