force-app/main/default/objects/Pricing_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Main_Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NMP_Code__c</columns>
    <columns>Price_Request_Category__c</columns>
    <columns>Region__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>