force-app/main/default/objects/Pricing_Request__c/listViews/INT_Process_Customer_Solution_OPEN.listView-meta.xml
<ListView>
    <fullName>INT_Process_Customer_Solution_OPEN</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_ERP_Sold_to__c</columns>
    <columns>Price_Request_Category__c</columns>
    <columns>Region__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Hillrom_Parts__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Update_Type__c</columns>
    <columns>Related_to_pricing_request__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,Request Submitted,In Progress,Waiting Information</value>
    </filters>
    <label>INT Process Customer Solution_OPEN</label>
    <queue>INT_Process_Customer_Solution</queue>
</ListView>