force-app/main/default/objects/Pricing_Request__c/listViews/INT_Process_Customer_Solution_Pricing_Request.listView-meta.xml
<ListView>
    <fullName>INT_Process_Customer_Solution_Pricing_Request</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Price_Request_Category__c</columns>
    <columns>Region__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Hillrom_Parts__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Update_Type__c</columns>
    <columns>Related_to_pricing_request__c</columns>
    <filterScope>Queue</filterScope>
    <label>INT Process Customer Solution</label>
    <queue>INT_Process_Customer_Solution</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>